# DungineX

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CountLine.ps1  DungineX.sln  README.md
Demo/: CMakeLists.txt
Demo/AppDemo/: AppDemo.vcxproj  CMakeLists.txt  Main.cpp
Demo/Car/: CMakeLists.txt  Car.cpp  Car.h  Car.vcxproj  Car.vcxproj.filters  CarApp.cpp  CarApp.h  Main.cpp
Demo/Firework/: CMakeLists.txt  Firework.cpp  Firework.h  Firework.vcxproj  Firework.vcxproj.filters  FireworkApp.cpp  FireworkApp.h  Main.cpp
Demo/HelloThere/: CMakeLists.txt  Main.cpp
Demo/Platform/: CMakeLists.txt  Main.cpp  Platform.vcxproj  Platform.vcxproj.filters  PlatformApp.cpp  PlatformApp.h
DungineX/: CMakeLists.txt  DungineX.vcxproj  DungineX.vcxproj.filters
DungineX/Include/DgeX/: DgeX.h  EntryPoint.h  dgexpch.h
DungineX/Include/DgeX/Application/: Application.h  Window.h
DungineX/Include/DgeX/Application/Event/: ApplicationEvent.h  Event.h  EventBuffer.h  KeyEvent.h  MouseEvent.h
DungineX/Include/DgeX/Application/Input/: Input.h  KeyCode.h  MouseCode.h
DungineX/Include/DgeX/Application/Interface/: Interface.h  InterfaceStack.h  Layer.h  (+1 more)
DungineX/Include/DgeX/Common/: Assert.h  Base.h  Common.h  DeltaTime.h  Log.h  Macros.h
DungineX/Include/DgeX/Core/: DeltaTime.h  Math.h  ObjectPool.h  ObjectQueue.h  UUID.h
DungineX/Include/DgeX/Physics/: Common.h  Physics.h  phxpch.h
DungineX/Include/DgeX/Renderer/: Buffer.h  Camera.h  Color.h  Font.h  GraphicsContext.h  RenderApi.h  RenderCommand.h  Renderer.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h
DungineX/Include/DgeX/Utils/: Easing.h  File.h  Math.h  PlatformUtils.h  Random.h  String.h
DungineX/Source/: dgexpch.cpp
DungineX/Source/Application/: Application.cpp  Window.cpp
DungineX/Source/Application/Event/: EventBuffer.cpp
DungineX/Source/Application/Input/: Input.cpp
DungineX/Source/Application/Interface/: Interface.cpp  InterfaceStack.cpp  Layer.cpp  SplashInterface.cpp
DungineX/Source/Common/: Log.cpp
DungineX/Source/Core/: UUID.cpp
DungineX/Source/Physics/: phxpch.cpp
DungineX/Source/Physics/Body/: Contact.cpp  ContactResolver.cpp  RigidBody.cpp
DungineX/Source/Physics/Core/: Base.cpp  DWorld.cpp  Types.cpp
DungineX/Source/Physics/Particle/: Particle.cpp  ParticleContact.cpp  ParticleForceGenerator.cpp  ParticleLink.cpp  ParticleWorld.cpp
DungineX/Source/Platform/: DeviceEasyX.cpp  DeviceGlfw.cpp
DungineX/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLRenderApi.cpp  OpenGLRenderCommand.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp
DungineX/Source/Renderer/: Font.cpp  GraphicsContext.cpp  OrthographicCamera.cpp  Renderer.cpp  Shader.cpp
DungineX/Source/Renderer/Camera/: InterfaceCamera.cpp  OrthographicCamera.cpp  SceneCamera.cpp
DungineX/Source/Utils/: File.cpp  Random.cpp  String.cpp
DungineX/cmake/: VersionResource.rc  version.cmake
DungineX/include/DgeX/: Defines.h  DgeX.h  EntryPoint.h  Error.h  Version.h
DungineX/include/DgeX/Application/: Application.h
DungineX/include/DgeX/Core/: Assert.h  Base.h  DeltaTime.h  Log.h  Logger.h  Macros.h  UUID.h
DungineX/include/DgeX/Impl/: EntryPointImpl.h  Expected.h  MainLoop.h
DungineX/include/DgeX/Physics/: Version.h
DungineX/include/DgeX/Renderer/: Buffer.h  Color.h  Font.h  GraphicsContext.h  RenderApi.h  RenderCommand.h  Renderer.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h
DungineX/include/DgeX/Utils/: Assert.h  Easing.h  File.h  Log.h  Macros.h  Math.h  PlatformUtils.h  Random.h  Strings.h  Types.h  Xml.h
DungineX/src/: EntryPoint.cpp  Version.cpp
DungineX/src/Application/: Application.cpp  Window.cpp
DungineX/src/Application/Event/: Event.cpp  EventAdapter.cpp  EventAdapter.h  EventBuffer.cpp  EventEmitter.cpp  KeyEvents.cpp  MouseEvents.cpp  WindowEvents.cpp
DungineX/src/Application/Input/: Input.cpp
DungineX/src/Application/Interface/: Interface.cpp  InterfaceStack.cpp  Layer.cpp  LayerStack.cpp  SplashInterface.cpp
DungineX/src/Application/Style/: Color.cpp  Selector.cpp  Style.cpp  Stylesheet.cpp  Unit.cpp
DungineX/src/Application/Widget/: DomContext.cpp  DomElement.cpp  DomNode.cpp  EventListener.cpp
DungineX/src/Common/: Log.cpp
DungineX/src/Core/: Log.cpp  Logger.cpp  UUID.cpp
DungineX/src/Device/Graphics/: Graphics.cpp  RenderCommand.cpp  Renderer.cpp  RendererImpl.h  Window.cpp
DungineX/src/Device/Impl/: MainLoop.cpp
DungineX/src/Device/Input/: Input.cpp
DungineX/src/Impl/: MainLoop.cpp  MainLoop.h
DungineX/src/Physics/Body/: RigidBody.cpp
DungineX/src/Physics/Core/: Base.cpp  DWorld.cpp  MassWorld.cpp
DungineX/src/Physics/Particle/: Particle.cpp  ParticleWorld.cpp
DungineX/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLInput.cpp  OpenGLRenderApi.cpp  OpenGLRenderCommand.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLUtils.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp
DungineX/src/Renderer/: Buffer.cpp  Canvas.cpp  Color.cpp  Font.cpp  GraphicsContext.cpp  RenderApi.cpp  RenderApiImpl.cpp  RenderApiImpl.h  RenderCommandImpl.cpp  RenderCommandImpl.h  Renderer.cpp  Shader.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
DungineX/src/Renderer/Camera/: InterfaceCamera.cpp  PerspectiveCamera.cpp  SceneCamera.cpp
DungineX/src/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLRenderApi.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp
DungineX/src/Scene/Camera/: InterfaceCamera.cpp  PerspectiveCamera.cpp  SceneCamera.cpp
DungineX/src/Utils/: File.cpp  Log.cpp  Random.cpp  String.cpp  Strings.cpp  Xml.cpp
Tests/: CMakeLists.txt  DomTest.cpp  IntrusiveListTest.cpp  LogConfig.xml  ObjectPoolTest.cpp  PropertyTest.cpp  SelectorTest.cpp  Version.cpp  doctestplus.h
Tests/Cases/Impl/: ExpectedTest.cpp
Tests/Cases/Utils/: StringsTest.cpp
Tests/Resource/: Page.xml
(+186 files in other folders)
